changed project to work for all items - not only potions. adjusted names of classes/variables etc to reflect this change

--- a/TerrariaFarmingHelper/TerrariaFarmingHelper/TerrariaFarmingHelper.csproj
+++ b/TerrariaFarmingHelper/TerrariaFarmingHelper/TerrariaFarmingHelper.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Terraria_Potion_Ingredients</RootNamespace>
+    <RootNamespace>TerrariaFarmingHelper</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Data\Terraria Data - Potions.csv">
+    <None Update="Data\ItemFarmingData.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
